--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xivo-ci (0.0.3) stable; urgency=low
+
+  * remove useless code in jenkins_exec_feature
+
+ -- Cedric Abunar <cabunar@avencall.com>  Thu, 10 Apr 2014 10:25:06 -0400
+
 xivo-ci (0.0.2) stable; urgency=low
 
   * new script ci-deploy-virtualenv
