--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xivo-ci (0.0.4) stable; urgency=low
+
+  * add virtualenv command into jenkins_exec_features
+
+ -- Cedric Abunar <cabunar@avencall.com>  Thu, 10 Apr 2014 10:31:30 -0400
+
 xivo-ci (0.0.3) stable; urgency=low
 
   * remove useless code in jenkins_exec_feature
