--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xivo-ci (0.0.8) stable; urgency=low
+
+  * fix install in virtualenv
+
+ -- Cedric Abunar <cabunar@avencall.com>  Thu, 10 Apr 2014 12:41:02 -0400
+
 xivo-ci (0.0.7) stable; urgency=low
 
   * fix install requirements
