--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xivo-ci (0.0.9) stable; urgency=low
+
+  * add --upgrade as args to pip install 
+
+ -- Cedric Abunar <cabunar@avencall.com>  Thu, 10 Apr 2014 13:02:27 -0400
+
 xivo-ci (0.0.8) stable; urgency=low
 
   * fix install in virtualenv
