--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xivo-ci (0.0.10) stable; urgency=low
+
+  * fix execute script python into virtualenv
+
+ -- Cedric Abunar <cabunar@avencall.com>  Fri, 11 Apr 2014 09:04:27 -0400
+
 xivo-ci (0.0.9) stable; urgency=low
 
   * add --upgrade as args to pip install 
