--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xivo-ci (0.0.13) stable; urgency=low
+
+  * use nosetests exit code
+
+ -- Sebastien Duthil <sduthil@avencall.com>  Tue, 15 Apr 2014 17:31:50 -0400
+
 xivo-ci (0.0.12) stable; urgency=low
 
   * remove hardcoded path
