--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xivo-ci (0.0.14) stable; urgency=low
+
+  * pythonpath is not set anymore when running lettuce
+
+ -- Sebastien Duthil <sduthil@avencall.com>  Wed, 16 Apr 2014 15:21:52 -0400
+
 xivo-ci (0.0.13) stable; urgency=low
 
   * use nosetests exit code
