--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xivo-ci (0.0.15) stable; urgency=low
+
+  * don't fail when travis is running a job
+
+ -- Sebastien Duthil <sduthil@avencall.com>  Wed, 23 Apr 2014 14:54:11 -0400
+
 xivo-ci (0.0.14) stable; urgency=low
 
   * pythonpath is not set anymore when running lettuce
