ci_check_status: check branch master instead of last build
reason: pull requests are built when submitted, becoming the last
build. If the pull request does not pass Travis, the last build
becomes failed, but we do not want the script to fail

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xivo-ci (0.0.17) xivo-dev; urgency=low
+
+  * ci_check_status: check branch master instead of last build
+
+ -- Sebastien Duthil <sduthil@avencall.com>  Mon, 26 May 2014 11:24:26 -0400
+
 xivo-ci (0.0.16) xivo-dev; urgency=low
 
   * increase waiting time after installing xivo
