--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,16 @@
-xivo-ci (0.0.17) xivo-dev; urgency=low
+xivo-ci (0.0.18) stable; urgency=low
+
+  * ci_check_travis: add failure state
+
+ -- Sebastien Duthil <sduthil@avencall.com>  Tue, 27 May 2014 11:51:55 -0400
+
+xivo-ci (0.0.17) stable; urgency=low
 
   * ci_check_status: check branch master instead of last build
 
  -- Sebastien Duthil <sduthil@avencall.com>  Mon, 26 May 2014 11:24:26 -0400
 
-xivo-ci (0.0.16) xivo-dev; urgency=low
+xivo-ci (0.0.16) stable; urgency=low
 
   * increase waiting time after installing xivo
 
