--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xivo-ci (0.0.20) stable; urgency=low
+
+  * nose-pep8-pylint: add twisted compatibility
+
+ -- Etienne Lessard <elessard@avencall.com>  Wed, 02 Jul 2014 08:57:15 -0400
+
 xivo-ci (0.0.19) stable; urgency=low
 
   * ci_check_travis: automatically fetch travis repos
