--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xivo-ci (0.0.21) stable; urgency=low
+
+  * nose-pep8-pylint: ignore pep8 and pylint exit status
+
+ -- Etienne Lessard <elessard@avencall.com>  Wed, 02 Jul 2014 15:36:09 -0400
+
 xivo-ci (0.0.20) stable; urgency=low
 
   * nose-pep8-pylint: add twisted compatibility
