--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xivo-ci (0.0.22) stable; urgency=low
+
+  * nose-pep8-pylint: add virtualenv notion
+
+ -- Sebastien Duthil <sduthil@avencall.com>  Thu, 03 Jul 2014 11:51:34 -0400
+
 xivo-ci (0.0.21) stable; urgency=low
 
   * nose-pep8-pylint: ignore pep8 and pylint exit status
