--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xivo-ci (0.0.23) stable; urgency=low
+
+  * jenkins_exec_features: fail when lettuce fails
+
+ -- Sebastien Duthil <sduthil@avencall.com>  Fri, 11 Jul 2014 15:00:15 -0400
+
 xivo-ci (0.0.22) stable; urgency=low
 
   * nose-pep8-pylint: add virtualenv notion
