--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xivo-ci (0.0.24) stable; urgency=low
+
+  * ci_test_report: add small introduction to the report
+
+ -- Sebastien Duthil <sduthil@avencall.com>  Mon, 14 Jul 2014 10:23:55 -0400
+
 xivo-ci (0.0.23) stable; urgency=low
 
   * jenkins_exec_features: fail when lettuce fails
