--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xivo-ci (0.0.26) xivo-dev; urgency=low
+
+  * ci_check_xivo: revert previous modification
+
+ -- Sebastien Duthil <sduthil@avencall.com>  Fri, 26 Sep 2014 11:33:23 -0400
+
 xivo-ci (0.0.25) xivo-dev; urgency=low
 
   * ci_check_xivo: allow checking of arbitrary package
