--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xivo-ci (0.0.28) xivo-dev; urgency=low
+
+  * nose-pep8-pylint: allow -v option
+
+ -- Sebastien Duthil <sduthil@avencall.com>  Thu, 13 Nov 2014 10:55:53 -0500
+
 xivo-ci (0.0.27) xivo-dev; urgency=low
 
   * ci_test_report: escape rest special characters
