--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xivo-ci (0.0.30) UNRELEASED; urgency=low
+
+  * add ci-workon-new
+
+ -- Pascal Cadotte Michaud <pcadottemichaud@avencall.com>  Wed, 19 Nov 2014 09:11:50 -0500
+
 xivo-ci (0.0.28) xivo-dev; urgency=low
 
   * nose-pep8-pylint: allow -v option
