--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xivo-ci (0.0.34) stable; urgency=medium
+
+  * add xivo-get-package-version script
+
+ -- Cedric Abunar <cabunar@avencall.com>  Wed, 25 Feb 2015 08:47:32 -0500
+
 xivo-ci (0.0.33) xivo-dev; urgency=low
 
   * nose-pep8-pylint: fail when installing requirements failed
