--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xivo-ci (0.0.36) xivo-dev; urgency=low
+
+  * nose-pep8-pylint: fix jenkins reports
+
+ -- Sebastien Duthil <sduthil@avencall.com>  Tue, 03 Mar 2015 09:14:46 -0500
+
 xivo-ci (0.0.35) stable; urgency=medium
 
   * add missing script
