--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xivo-ci (0.0.37) xivo-dev; urgency=low
+
+  * ci-tox: add ci-tox
+
+ -- Sebastien Duthil <sduthil@avencall.com>  Mon, 13 Jul 2015 16:43:29 -0400
+
 xivo-ci (0.0.36) xivo-dev; urgency=low
 
   * nose-pep8-pylint: fix jenkins reports
