--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xivo-ci (0.0.38) xivo-dev; urgency=low
+
+  * ci-tox: add set -xe
+
+ -- Sebastien Duthil <sduthil@avencall.com>  Mon, 13 Jul 2015 16:48:24 -0400
+
 xivo-ci (0.0.37) xivo-dev; urgency=low
 
   * ci-tox: add ci-tox
